--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Cory</string>
     <string name="yes">Yes</string>
     <string name="no">No</string>
+    <string name="more_information">More Information</string>
 </resources>
