--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,10 +8,12 @@
     <string name="speak_to_a_nurse">You should speak with a nurse about your symptoms.</string>
     <string name="isolate_your_self_for_14_days">You should immediately limit your contact with others and isolate yourself at home.</string>
     <string name="title_home">Home</string>
-    <string name="title_notifications">Information</string>
+    <string name="title_information">Q&amp;A</string>
     <string name="collapse_information_card">collapse information card</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="about">About</string>
+    <string name="title_about">About</string>
 
 </resources>
