--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="negative">STAY AT HOME</string>
     <string name="speak_to_a_nurse">You should speak with a nurse about your symptoms.</string>
     <string name="isolate_your_self_for_14_days">You should immediately limit your contact with others and isolate yourself at home.</string>
-    <string name="title_home">Home</string>
+    <string name="title_home">Screening Tool</string>
     <string name="title_information">Q&amp;A</string>
     <string name="collapse_information_card">collapse information card</string>
 
@@ -15,5 +15,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="about">About</string>
     <string name="title_about">About</string>
+    <string name="disclaimer">Please note that this is not a medical assessment. If you are experiencing severe symptoms, seek medical attention. This service is not a substitute for consulting with your doctor.</string>
 
 </resources>
